[package]
name = "skin_downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.7"
bloom = "0.2.0"
flate2 = "1.0.28"
image = "0.24.8"
itertools = "0.12.1"
oxipng = "9.0.0"
rayon = "1.8.0"
reqwest = "0.11.24"
rusqlite = { version = "0.31.0", features = ["bundled"] }
ruzstd = "0.6.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sled = "0.34.7"
tokio = { version = "1.38.2", features = ["full"] }
